--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.3",
     "formidable": "^1.2.1",
     "https": "^1.0.0",
+    "log4js": "^3.0.6",
     "request": "^2.88.0"
   },
   "devDependencies": {},
